--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,1 +1,17 @@
-<div class="header"></div>
+<div class="header">
+  <div class="header-container">
+    <img src="../../../assets/icons/tai-center-logo-principal-color.svg" />
+    <p class="content-secondary s-25">
+      El mejor centro deportivo de Bellreguard
+    </p>
+    <button
+      pButton
+      pRipple
+      type="button"
+      class="p-button-rounded btn-h btn-primary mt-10"
+      label="Iniciar sesión"
+      icon="pi pi-user"
+      routerLink="/tc/login"
+    ></button>
+  </div>
+</div>
