--- a/src/app/component/login/pages/login.component.html
+++ b/src/app/component/login/pages/login.component.html
@@ -1,6 +1,7 @@
+<div class="header-login"></div>
 <div class="container">
+  <h5 class="hard-title s-25">Iniciar Sesión</h5>
   <p-card>
-    <h3>Bienvenidos a TaiCenter</h3>
     <div class="card-container">
       <div class="input-login">
         <span class="p-float-label">
@@ -26,7 +27,7 @@
           class="p-button-rounded btn-h btn-secondary"
           label="Registrarse"
           icon="pi pi-user-edit"
-          routerLink="/registro"
+          routerLink="/tc/registro"
         ></button>
       </div>
       <p-divider class="divider-v" layout="vertical">Ó</p-divider>
@@ -38,7 +39,7 @@
           pButton
           pRipple
           type="button"
-          class="p-button-rounded btn-h btn-google"
+          class="p-button-rounded btn-h btn-google btn-social"
           label="Google"
           icon="pi pi-google"
         ></button>
@@ -46,7 +47,7 @@
           pButton
           pRipple
           type="button"
-          class="p-button-rounded btn-h"
+          class="p-button-rounded btn-h btn-social"
           label="Facebook"
           icon="pi pi-facebook"
         ></button>
