--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -1,4 +1,9 @@
 :root {
   --color-text-principal: #ce5505;
   --color-text-content: white;
+  --size-content: 25px;
+  --size-content-medium: 16px;
+  --size-content-small: 14px;
+  --font-family-principal: "Sirin Stencil", cursive;
+  --font-family-secondary: "Frijole", cursive;
 }
