--- a/src/app/component/footer/footer.component.scss
+++ b/src/app/component/footer/footer.component.scss
@@ -2,6 +2,7 @@
   position: relative;
   bottom: 0;
   left: 0;
+  top: 35px;
   background-image: url("../../../assets/img/tai-center-footer-1024x403.jpg");
   background-position: center top;
   background-repeat: no-repeat;
