--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,9 +1,7 @@
 <div class="header">
   <div class="header-container">
-    <img src="../../../assets/icons/tai-center-logo-principal-color.svg" />
-    <p class="content-secondary s-25">
-      El mejor centro deportivo de Bellreguard
-    </p>
+    <img src="../../../assets/icons/tai-center-logo-full-color.svg" />
+    <p class="content-secondary s-25">Tu centro deportivo en Bellreguard</p>
     <button
       pButton
       pRipple
