--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,12 +14,17 @@ body {
   display: grid;
   justify-content: center;
   text-align: center;
-  margin: 10px 10px;
+  width: 100%;
 }
 
 .title {
   color: var(--color-text-principal);
   margin: 0;
+}
+
+.title-2 {
+  color: var(--color-text-principal);
+  font-family: var(--font-family-principal);
 }
 
 .hard-title {
@@ -49,7 +54,7 @@ body {
 }
 
 .btn-social {
-  font-family: var(--font-family-secondary) !important;
+  font-family: var(--font-family-principal) !important;
 }
 
 .btn-google:focus {
@@ -59,7 +64,7 @@ body {
 .btn-primary {
   background: var(--color-text-principal) !important;
   border: 1px solid var(--color-text-principal) !important;
-  font-family: var(--font-family-secondary) !important;
+  font-family: var(--font-family-principal) !important;
 
   &:focus {
     box-shadow: 0 0 0 0.1rem var(--color-text-principal) !important;
@@ -69,7 +74,7 @@ body {
 .btn-secondary {
   background: black !important;
   border: 1px solid black !important;
-  font-family: var(--font-family-secondary) !important;
+  font-family: var(--font-family-principal) !important;
 
   &:focus {
     box-shadow: 0 0 0 0.1rem black !important;
