--- a/src/assets/scss/variable.scss
+++ b/src/assets/scss/variable.scss
@@ -1,6 +1,7 @@
 :root {
   --color-text-principal: #ce5505;
   --color-text-content: white;
+  --color-text-content-secondary: black;
   --size-content: 25px;
   --size-content-medium: 16px;
   --size-content-small: 14px;
