new pages and new admin panel

--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -9,7 +9,7 @@
       class="p-button-rounded btn-h btn-primary mt-10"
       label="Iniciar sesión"
       icon="pi pi-user"
-      routerLink="/tc/login"
+      routerLink="/panel/login"
     ></button>
   </div>
 </div>
