--- a/src/app/component/login/pages/login.component.html
+++ b/src/app/component/login/pages/login.component.html
@@ -28,7 +28,7 @@
           class="p-button-rounded btn-h btn-secondary"
           label="Registrarse"
           icon="pi pi-user-edit"
-          routerLink="/tc/registro"
+          routerLink="/panel/registro"
         ></button>
       </div>
       <p-divider class="divider-v" layout="vertical">Ó</p-divider>
