--- a/src/app/component/register/pages/register-doc.component.html
+++ b/src/app/component/register/pages/register-doc.component.html
@@ -63,7 +63,7 @@
           type="button"
           class="p-button-rounded btn-h btn-secondary"
           label="Regresar"
-          routerLink="/tc/login"
+          routerLink="/panel/login"
         ></button>
       </div>
     </form>
