--- a/src/styles.scss
+++ b/src/styles.scss
@@ -118,7 +118,7 @@ body {
   text-align: center;
 }
 
-.ng-touched:not(form) {
+/*.ng-touched:not(form) {
   border: solid #e60017;
   border-width: 1px 1px 1px 3px;
-}
+}*/
