--- a/src/app/shared/component/notification/notification.component.html
+++ b/src/app/shared/component/notification/notification.component.html
@@ -1,1 +1,7 @@
-<p-toast position="top-center"></p-toast>
+<p-toast key="single" position="top-center">
+  <ng-template let-messages pTemplate="messages">
+    <span style="flex: 1" *ngFor="let message of messages.data">
+      {{ message }}
+    </span>
+  </ng-template>
+</p-toast>
