--- a/src/app/component/admin/pages/customer/customer.component.scss
+++ b/src/app/component/admin/pages/customer/customer.component.scss
@@ -1,3 +1,14 @@
 .container-customer {
   padding: 50px;
 }
+
+button {
+  margin-left: 10px;
+}
+
+.color-container {
+  display: grid;
+  span {
+    margin: 10px 0;
+  }
+}
