--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -7,7 +7,7 @@
       pRipple
       type="button"
       class="p-button-rounded btn-h btn-primary mt-10"
-      label="Iniciar sesión"
+      label="Ingresar Ahora"
       icon="pi pi-user"
       routerLink="/login"
     ></button>
@@ -21,7 +21,7 @@
         <span class="hard-title fs-50">22€</span>
       </ng-template>
       <div class="class">
-        <h4>8 días, 1 clase por día</h4>
+        <h4>6 días, 1 clase por día</h4>
         <p>CROSS, G.A.P, H.I.I.T</p>
       </div>
     </p-card>
@@ -30,7 +30,7 @@
         <span class="hard-title fs-50">28€</span>
       </ng-template>
       <div class="class">
-        <h4>15 días, 1 clase por día</h4>
+        <h4>12 días, 1 clase por día</h4>
         <p>CROSS, G.A.P, H.I.I.T</p>
       </div>
     </p-card>
