--- a/src/app/component/register/pages/register-doc.component.html
+++ b/src/app/component/register/pages/register-doc.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <p-card>
-    <app-error-form [form]="formGroup"></app-error-form>
+    <!-- <app-error-form [form]="formGroup"></app-error-form>-->
     <p class="text-style-principal">
       A continuación es necesario que ingrese los datos para crear tu perfil en
       Tai Center.
