--- a/src/app/component/admin/pages/reserve-configuration/reserve-configuration.component.html
+++ b/src/app/component/admin/pages/reserve-configuration/reserve-configuration.component.html
@@ -17,7 +17,26 @@
     ></button>
   </ng-template>
 </p-confirmDialog>
-<p-card>
+<p-confirmDialog #blockDelete key="block-delete-id" styleClass="pedo">
+  <ng-template pTemplate="footer">
+    <button
+      pButton
+      pRipple
+      label="Aceptar"
+      class="p-button-rounded btn-h btn-primary"
+      (click)="blockDelete.accept()"
+    ></button>
+    <button
+      pButton
+      pRipple
+      type="button"
+      class="p-button-rounded btn-h btn-secondary"
+      label="Cancelar"
+      (click)="blockDelete.reject()"
+    ></button>
+  </ng-template>
+</p-confirmDialog>
+<div class="container-table">
   <p-table
     [columns]="cols"
     [value]="recurringEvents"
@@ -76,5 +95,6 @@
       </tr>
     </ng-template>
   </p-table>
-</p-card>
+</div>
+
 <app-calendar (deleteEvent)="deleteEvent($event)"></app-calendar>
