--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -61,6 +61,7 @@
   color: var(--color-text-principal);
   border-radius: 3px;
   padding: 10px 10px;
+  font-size: 20px;
   h4 {
     margin: 0;
     font-weight: 900;
