--- a/src/app/component/admin/pages/customer/components/manage-customer/manage-customer.component.scss
+++ b/src/app/component/admin/pages/customer/components/manage-customer/manage-customer.component.scss
@@ -27,3 +27,15 @@
   text-align: center;
   margin-top: 30px;
 }
+
+@media (max-width: 600px) {
+  .form-container {
+    grid-template-columns: 1fr;
+  }
+
+  ::ng-deep {
+    .p-dialog .p-dialog-header .p-dialog-title {
+      font-size: 1rem;
+    }
+  }
+}
