--- a/src/app/component/user/pages/user-doc/user-doc.component.html
+++ b/src/app/component/user/pages/user-doc/user-doc.component.html
@@ -37,14 +37,14 @@
     ></button>
   </ng-template>
 </p-confirmDialog>
-<div class="container">
+<div class="container-user">
   <h5 class="hard-title s-25">Bienvenido {{ userName }}</h5>
   <p-card>
     <p class="text-style-principal">
       Mantén actualizada tu información, así podremos conocerte mejor
     </p>
     <div class="register-container">
-      <div class="perfil">
+      <!--<div class="perfil">
         <figure>
           <img class="img-size" [src]="imageUrl" />
         </figure>
@@ -57,7 +57,7 @@
           />
           Actualizar foto
         </label>
-      </div>
+      </div>-->
       <form [formGroup]="formGroup">
         <!-- <app-error-form [form]="formGroup"></app-error-form>-->
         <p-divider layout="horizontal">
@@ -142,6 +142,15 @@
               pInputText
             />
             <label for="float-input">Wods restantes</label>
+          </span>
+          <span class="p-float-label">
+            <input
+              formControlName="state"
+              id="float-input"
+              type="text"
+              pInputText
+            />
+            <label for="float-input">Estado</label>
           </span>
         </div>
         <div class="form-button">
