--- a/src/app/component/user/pages/user-doc/user-doc.component.scss
+++ b/src/app/component/user/pages/user-doc/user-doc.component.scss
@@ -1,6 +1,15 @@
+.container-user {
+  display: grid;
+  text-align: center;
+}
+
+p-divider {
+  margin-bottom: 20px;
+}
+
 .register-container {
   display: grid;
-  grid-template-columns: 20% 80%;
+  grid-template-columns: 1fr;
   align-content: center;
   gap: 20px;
   justify-content: center;
@@ -37,6 +46,7 @@ input[type="file"] {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 25px;
+  margin-top: 40px;
 }
 
 h4 {
@@ -50,12 +60,18 @@ h4 {
   width: 100%;
 }
 
-::ng-deep .p-card .p-card-body {
-  padding: 0 2rem;
+::ng-deep {
+  .p-card .p-card-body {
+    padding: 0 2rem;
+  }
 }
 
 @media (max-width: 600px) {
   .register-container {
+    grid-template-columns: 1fr;
+  }
+
+  .form-personal {
     grid-template-columns: 1fr;
   }
 
