--- a/src/app/shared/component/calendar/pages/wod-editor/wod-editor.component.scss
+++ b/src/app/shared/component/calendar/pages/wod-editor/wod-editor.component.scss
@@ -22,7 +22,7 @@
   margin-top: 20px;
   text-align: center;
   button {
-    margin: 0 20px;
+    margin: 10px 20px;
   }
 }
 @media (max-width: 600px) {
