--- a/src/app/component/admin/pages/customer/components/manage-customer/manage-customer.component.scss
+++ b/src/app/component/admin/pages/customer/components/manage-customer/manage-customer.component.scss
@@ -37,5 +37,10 @@
     .p-dialog .p-dialog-header .p-dialog-title {
       font-size: 1rem;
     }
+
+    .p-dialog-content {
+      overflow: auto;
+      overflow-y: auto;
+    }
   }
 }
