--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -16,7 +16,7 @@
       <h5 class="title mt-10">Contacto:</h5>
       <p class="content-secondary">
         Movil: +34 654 07 00 17 <br />
-        Email: taicenter@gmail.com
+        Email: taicenterbellreguard@gmail.com
       </p>
     </div>
     <div class="footer-address">
