--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -7,61 +7,58 @@
       pRipple
       type="button"
       class="p-button-rounded btn-h btn-primary mt-10"
-      label="Ingresar Ahora"
+      label="Acceder"
       icon="pi pi-user"
       routerLink="/login"
     ></button>
   </div>
 </div>
 <div class="plan-container">
-  <h1 class="hard-title">Planes</h1>
+  <h1 class="hard-title">Tarifas</h1>
   <div class="plan-container-cards">
-    <p-card header="1 Semana" subheader="Una semana">
+    <p-card header="1 Semana">
       <ng-template pTemplate="header">
         <span class="hard-title fs-50">22€</span>
       </ng-template>
       <div class="class">
-        <h4>6 días, 1 clase por día</h4>
-        <p>CROSS, G.A.P, H.I.I.T</p>
+        <h4>5 clases</h4>
+        <p>CROSS TRAINING, G.A.P, H.I.I.T</p>
       </div>
     </p-card>
-    <p-card header="1/2 Mes" subheader="Medio mes">
+    <p-card header="1/2 Mes">
       <ng-template pTemplate="header">
-        <span class="hard-title fs-50">28€</span>
+        <span class="hard-title fs-50">30€</span>
       </ng-template>
       <div class="class">
-        <h4>12 días, 1 clase por día</h4>
-        <p>CROSS, G.A.P, H.I.I.T</p>
+        <h4>10 clases</h4>
+        <p>CROSS TRAINING, G.A.P, H.I.I.T</p>
       </div>
     </p-card>
-    <p-card header="Básico" subheader="Para los que están empezando">
+    <p-card header="Básico">
       <ng-template pTemplate="header">
         <span class="hard-title fs-50">38€</span>
       </ng-template>
       <div class="class">
-        <h4>3 Clases por semana</h4>
-        <p>CROSS, G.A.P, H.I.I.T</p>
+        <h4>12 clases</h4>
+        <p>CROSS TRAINING, G.A.P, H.I.I.T</p>
       </div>
     </p-card>
-    <p-card
-      header="Intermedio"
-      subheader="Para los que quieren ir a otro nivel"
-    >
+    <p-card header="Intermedio">
       <ng-template pTemplate="header">
         <span class="hard-title fs-50">48€</span>
       </ng-template>
       <div class="class">
-        <h4>6 Clases por semana</h4>
-        <p>CROSS, G.A.P, H.I.I.T y OPEN CENTER</p>
+        <h4>24 clases</h4>
+        <p>CROSS TRAINING, G.A.P, H.I.I.T y OPEN CENTER</p>
       </div>
     </p-card>
-    <p-card header="Avanzado" subheader="Para los más fuertes">
+    <p-card header="Avanzado">
       <ng-template pTemplate="header">
         <span class="hard-title fs-50">50€</span>
       </ng-template>
       <div class="class">
-        <h4>Ilimitado</h4>
-        <p>CROSS, G.A.P, H.I.I.T y OPEN CENTER</p>
+        <h4>Clases ilimitadas</h4>
+        <p>CROSS TRAINING, G.A.P, H.I.I.T y OPEN CENTER</p>
       </div>
     </p-card>
   </div>
