--- a/src/app/component/user/pages/reserve-doc/reserve-doc.component.scss
+++ b/src/app/component/user/pages/reserve-doc/reserve-doc.component.scss
@@ -1,3 +1,14 @@
 .container-messages {
   margin: 50px;
 }
+
+@media (max-width: 600px) {
+  ::ng-deep {
+    .p-message .p-message-wrapper {
+      display: grid;
+      align-items: center;
+      text-align: center;
+      padding: 0.5rem 0.5rem;
+    }
+  }
+}
