--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -61,6 +61,15 @@
         <p>CROSS TRAINING, G.A.P, H.I.I.T y OPEN CENTER</p>
       </div>
     </p-card>
+    <p-card header="Bono">
+      <ng-template pTemplate="header">
+        <span class="hard-title fs-50">60€</span>
+      </ng-template>
+      <div class="class">
+        <h4>10 Clases</h4>
+        <p>CROSS TRAINING, G.A.P, H.I.I.T y OPEN CENTER</p>
+      </div>
+    </p-card>
   </div>
 </div>
 <app-footer></app-footer>
