change label suscripcion

--- a/src/app/component/admin/pages/customer/customer.component.html
+++ b/src/app/component/admin/pages/customer/customer.component.html
@@ -2,11 +2,11 @@
   <div class="color-container">
     <span>
       <p-colorPicker [(ngModel)]="colorEnd"></p-colorPicker>
-      <label> Subscripción vencida </label>
+      <label> Suscripción vencida </label>
     </span>
     <span>
       <p-colorPicker [(ngModel)]="colorPending"></p-colorPicker>
-      <label> Subscripción a punto de vencer</label>
+      <label> Suscripción a punto de vencer</label>
     </span>
   </div>
   <p-table
