--- a/src/app/component/root/root.component.html
+++ b/src/app/component/root/root.component.html
@@ -13,7 +13,7 @@
         ></p-button>
         {{ title }}
       </label>
-      <label>
+      <label class="label-logout">
         <p-button
           type="button"
           icon="pi pi-sign-out"
