--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -5,7 +5,7 @@
       <img src="../../../assets/icons/tai-center-logo-secondary-color.svg" />
       <p class="content-secondary">
         Centro deportivo adecuado para que puedas mejorar tu estado físico con
-        actividades como CROSS, HIT, GAP y OPEN BOX.
+        actividades como CROSS, HIIT, GAP y OPEN BOX.
       </p>
     </div>
     <div class="footer-social-media">
