--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,7 +1,9 @@
 <div class="header">
   <div class="header-container">
     <img src="../../../assets/icons/tai-center-logo-full-color.svg" />
-    <p class="content-secondary s-25">Tu centro deportivo en Bellreguard</p>
+    <p class="content-secondary s-25">
+      Tu centro de entrenamiento en Bellreguard
+    </p>
     <button
       pButton
       pRipple
