--- a/src/app/shared/component/calendar/pages/calendar-doc/calendar.component.scss
+++ b/src/app/shared/component/calendar/pages/calendar-doc/calendar.component.scss
@@ -9,6 +9,10 @@
     color: black;
   }
 
+  mwl-calendar-week-view {
+    z-index: 0;
+  }
+
   .cal-week-view {
     display: inline-block;
     width: 100%;
