--- a/src/app/component/admin/pages/customer/customer.component.html
+++ b/src/app/component/admin/pages/customer/customer.component.html
@@ -10,6 +10,7 @@
     </span>
   </div>
   <p-table
+    *ngIf="users.length > 0"
     [columns]="cols"
     [value]="users"
     responsiveLayout="stack"
